Fixed issues with header overflow and image

--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -18,11 +18,15 @@ html, body {
 
 header {
 
-    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+
+    max-height: 800px;
 }
 
 nav {
 
+    flex: 0 1 auto;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;  
@@ -140,7 +144,6 @@ nav {
     
             width: 100%;
         }
-
     }
 }
 
@@ -153,6 +156,8 @@ nav {
 .header__content {
 
     position: relative;
+    flex: 1 1 auto;
+    overflow: hidden;
 }
 
 .header__content__text {
@@ -172,9 +177,12 @@ nav {
 .header__content__img {
     
     position: relative;
-    height: 45%;
-    padding: 1.5em 1em;
+    height: 300px;
+    max-height: 100%;
     overflow: hidden;
+    background-image: url("../img/Cabin-1-Side-View.jpg");
+    background-position: center;
+    background-size: cover;
 
     > img {
 
@@ -187,6 +195,7 @@ nav {
 
     position: absolute;
     height: 100%;
+    top: 0;
     width: 50%;
     border-right: 15px solid #fff;
 
