--- a/src/scss/responsive.scss
+++ b/src/scss/responsive.scss
@@ -1,9 +1,5 @@
 @media screen and (min-width: 640px) {
 
-    .header__content__img {
-
-        height: 500px;
-    }
 }
 
 @media screen and (min-width: 768px) {
@@ -16,23 +12,6 @@
     .header__content__text {
 
         padding: 1.5em 1.25em;
-        width: 50%;
-
-        p {
-
-            width: 80%;
-        }
-
-    }
-    
-    .header__content__img {
-
-        position: absolute;
-        right: 0;
-        top: 0%;
-        width: 50%;
-        height: 375px;
-        padding: 0;
     }
 
     #vision {
@@ -51,14 +30,6 @@
     .vision__text {
 
         padding: 1.5em 2em;
-    }
-
-    .title__sub {
-
-        &.indent {
-
-            margin-left: 10%;
-        }
     }
 
     .section__title {
@@ -93,23 +64,86 @@
 
 @media screen and (min-width: 1024px) {
 
+    header {
+
+        height: 100vh;
+    }
+
     nav {
 
         padding: 1.5em 1.75em;
+    } 
+
+    .nav__brand, .nav__links {
+        flex: 0 0 50%;
+    }
+
+    .nav__links {
+
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        max-height: unset;
+        overflow: unset;
+    }
+
+    .nav__toggler {
+
+        display: none;
+    }
+
+    .nav__links__list {
+        flex: 1 0 auto;
+        text-align: left;
+        padding: 0em;
+    }
+
+    .links__list__item {
+
+        display: inline-block;
+    }
+
+    #make__enquiry__wrapper {
+        padding: .5em;
     }
 
     .section__title {
 
-        font-size: 3em;
+        font-size: 3.5em;
     }
+
 
     .header__content__text {
 
         padding: 1.5em 1.75em;
+        width: 50%;
 
         h1 {
 
             margin-top: .75em;
+        }
+
+        p {
+
+            width: 100%;
+        }
+    }
+        
+    .header__content__img {
+
+        position: absolute;
+        right: 0;
+        top: 0%;
+        width: 50%;
+        height: 100%;
+        padding: 0;
+    }
+
+    .title__sub {
+
+        &.indent {
+
+            margin-left: 10%;
         }
     }
 
@@ -168,56 +202,12 @@
         padding: 2em;
     }
 
-    .nav__brand, .nav__links {
-        flex: 0 0 50%;
-    }
-
-    .nav__links {
-
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        max-height: unset;
-        overflow: unset;
-    }
-
-    .nav__toggler {
-
-        display: none;
-    }
-
-    .nav__links__list {
-        flex: 1 0 auto;
-        text-align: left;
-        padding: 0em;
-    }
-
-    .links__list__item {
-
-        display: inline-block;
-    }
-
-    #make__enquiry__wrapper {
-
-        padding: .5em;
-
-    }
-
     .header__content__text {
 
         h1 {
 
             margin-top: 1em
         }
-    }
-
-    .header__content {
-
-        height: 600px;
-    }
-
-    .header__content__img {
-        height: 100%;
     }
 
     #hci__shape {
